Remove backup and info routes
Add configuration route

Stop keeping stale manifest versions

Require API key for GET /manifest route

Simplify manifest payload

Add error handling when getting manifests or configuration from a hostname for which there is nothing available

Add .goreleaser.yml

Change Dockerfile to work with goreleaser

Update README

Clean up swagger.yml
