# restapi/configure_microfest.go
@@ -26,11 +26,11 @@ func configureFlags(api *operations.MicrofestAPI) {
 func configureAPI(api *operations.MicrofestAPI) http.Handler {
 	// configure the api here
 	api.ServeError = errors.ServeError
+	api.GetConfigurationHandler = operations.GetConfigurationHandlerFunc(handlers.GetConfiguration)
+	api.PostConfigurationHandler = operations.PostConfigurationHandlerFunc(handlers.PostConfiguration)
 	api.GetManifestHandler = operations.GetManifestHandlerFunc(handlers.GetManifest)
 	api.PostManifestHandler = operations.PostManifestHandlerFunc(handlers.PostManifest)
 	api.PutManifestHandler = operations.PutManifestHandlerFunc(handlers.PutManifest)
-	api.PostBackupHandler = operations.PostBackupHandlerFunc(handlers.PostBackup)
-	api.GetInfoHandler = operations.GetInfoHandlerFunc(handlers.GetInfo)
 
 	ApiKey := os.Getenv("API_KEY")
 	if len(ApiKey) == 0 {
