# restapi/doc.go
@@ -2,14 +2,14 @@
 
 /*
 Package restapi Microfest
-Micro Application Manifest Manager
+Micro Application Manifest and Configuration Manager
 
 
     Schemes:
       http
     Host: localhost
     BasePath: /
-    Version: 0.1.0
+    Version: 0.0.1
     Contact: J. Iqbal<jade@beamery.com> https://github.com/LGUG2Z/microfest
 
     Consumes:
