# restapi/operations/get_configuration_responses.go
@@ -1,0 +1,206 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+)
+
+// GetConfigurationOKCode is the HTTP code returned for type GetConfigurationOK
+const GetConfigurationOKCode int = 200
+
+/*GetConfigurationOK OK
+
+swagger:response getConfigurationOK
+*/
+type GetConfigurationOK struct {
+	/*Cache-Control
+
+	 */
+	CacheControl string `json:"Cache-Control"`
+
+	/*
+	  In: Body
+	*/
+	Payload interface{} `json:"body,omitempty"`
+}
+
+// NewGetConfigurationOK creates GetConfigurationOK with default headers values
+func NewGetConfigurationOK() *GetConfigurationOK {
+
+	return &GetConfigurationOK{}
+}
+
+// WithCacheControl adds the cacheControl to the get configuration o k response
+func (o *GetConfigurationOK) WithCacheControl(cacheControl string) *GetConfigurationOK {
+	o.CacheControl = cacheControl
+	return o
+}
+
+// SetCacheControl sets the cacheControl to the get configuration o k response
+func (o *GetConfigurationOK) SetCacheControl(cacheControl string) {
+	o.CacheControl = cacheControl
+}
+
+// WithPayload adds the payload to the get configuration o k response
+func (o *GetConfigurationOK) WithPayload(payload interface{}) *GetConfigurationOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get configuration o k response
+func (o *GetConfigurationOK) SetPayload(payload interface{}) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetConfigurationOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	// response header Cache-Control
+
+	cacheControl := o.CacheControl
+	if cacheControl != "" {
+		rw.Header().Set("Cache-Control", cacheControl)
+	}
+
+	rw.WriteHeader(200)
+	payload := o.Payload
+	if err := producer.Produce(rw, payload); err != nil {
+		panic(err) // let the recovery middleware deal with this
+	}
+}
+
+// GetConfigurationUnauthorizedCode is the HTTP code returned for type GetConfigurationUnauthorized
+const GetConfigurationUnauthorizedCode int = 401
+
+/*GetConfigurationUnauthorized Unauthorized
+
+swagger:response getConfigurationUnauthorized
+*/
+type GetConfigurationUnauthorized struct {
+	/*Authorization information is missing or invalid
+
+	 */
+	WWWAuthenticate string `json:"WWW-Authenticate"`
+}
+
+// NewGetConfigurationUnauthorized creates GetConfigurationUnauthorized with default headers values
+func NewGetConfigurationUnauthorized() *GetConfigurationUnauthorized {
+
+	return &GetConfigurationUnauthorized{}
+}
+
+// WithWWWAuthenticate adds the wWWAuthenticate to the get configuration unauthorized response
+func (o *GetConfigurationUnauthorized) WithWWWAuthenticate(wWWAuthenticate string) *GetConfigurationUnauthorized {
+	o.WWWAuthenticate = wWWAuthenticate
+	return o
+}
+
+// SetWWWAuthenticate sets the wWWAuthenticate to the get configuration unauthorized response
+func (o *GetConfigurationUnauthorized) SetWWWAuthenticate(wWWAuthenticate string) {
+	o.WWWAuthenticate = wWWAuthenticate
+}
+
+// WriteResponse to the client
+func (o *GetConfigurationUnauthorized) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	// response header WWW-Authenticate
+
+	wWWAuthenticate := o.WWWAuthenticate
+	if wWWAuthenticate != "" {
+		rw.Header().Set("WWW-Authenticate", wWWAuthenticate)
+	}
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(401)
+}
+
+// GetConfigurationNotFoundCode is the HTTP code returned for type GetConfigurationNotFound
+const GetConfigurationNotFoundCode int = 404
+
+/*GetConfigurationNotFound Not Found
+
+swagger:response getConfigurationNotFound
+*/
+type GetConfigurationNotFound struct {
+
+	/*
+	  In: Body
+	*/
+	Payload string `json:"body,omitempty"`
+}
+
+// NewGetConfigurationNotFound creates GetConfigurationNotFound with default headers values
+func NewGetConfigurationNotFound() *GetConfigurationNotFound {
+
+	return &GetConfigurationNotFound{}
+}
+
+// WithPayload adds the payload to the get configuration not found response
+func (o *GetConfigurationNotFound) WithPayload(payload string) *GetConfigurationNotFound {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get configuration not found response
+func (o *GetConfigurationNotFound) SetPayload(payload string) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetConfigurationNotFound) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(404)
+	payload := o.Payload
+	if err := producer.Produce(rw, payload); err != nil {
+		panic(err) // let the recovery middleware deal with this
+	}
+}
+
+// GetConfigurationInternalServerErrorCode is the HTTP code returned for type GetConfigurationInternalServerError
+const GetConfigurationInternalServerErrorCode int = 500
+
+/*GetConfigurationInternalServerError Internal Server Error
+
+swagger:response getConfigurationInternalServerError
+*/
+type GetConfigurationInternalServerError struct {
+
+	/*
+	  In: Body
+	*/
+	Payload string `json:"body,omitempty"`
+}
+
+// NewGetConfigurationInternalServerError creates GetConfigurationInternalServerError with default headers values
+func NewGetConfigurationInternalServerError() *GetConfigurationInternalServerError {
+
+	return &GetConfigurationInternalServerError{}
+}
+
+// WithPayload adds the payload to the get configuration internal server error response
+func (o *GetConfigurationInternalServerError) WithPayload(payload string) *GetConfigurationInternalServerError {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get configuration internal server error response
+func (o *GetConfigurationInternalServerError) SetPayload(payload string) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetConfigurationInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(500)
+	payload := o.Payload
+	if err := producer.Produce(rw, payload); err != nil {
+		panic(err) // let the recovery middleware deal with this
+	}
+}
