# restapi/operations/post_configuration_responses.go
@@ -1,0 +1,166 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+)
+
+// PostConfigurationCreatedCode is the HTTP code returned for type PostConfigurationCreated
+const PostConfigurationCreatedCode int = 201
+
+/*PostConfigurationCreated Configuration Created
+
+swagger:response postConfigurationCreated
+*/
+type PostConfigurationCreated struct {
+
+	/*
+	  In: Body
+	*/
+	Payload string `json:"body,omitempty"`
+}
+
+// NewPostConfigurationCreated creates PostConfigurationCreated with default headers values
+func NewPostConfigurationCreated() *PostConfigurationCreated {
+
+	return &PostConfigurationCreated{}
+}
+
+// WithPayload adds the payload to the post configuration created response
+func (o *PostConfigurationCreated) WithPayload(payload string) *PostConfigurationCreated {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the post configuration created response
+func (o *PostConfigurationCreated) SetPayload(payload string) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *PostConfigurationCreated) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(201)
+	payload := o.Payload
+	if err := producer.Produce(rw, payload); err != nil {
+		panic(err) // let the recovery middleware deal with this
+	}
+}
+
+// PostConfigurationBadRequestCode is the HTTP code returned for type PostConfigurationBadRequest
+const PostConfigurationBadRequestCode int = 400
+
+/*PostConfigurationBadRequest Bad Request Body
+
+swagger:response postConfigurationBadRequest
+*/
+type PostConfigurationBadRequest struct {
+}
+
+// NewPostConfigurationBadRequest creates PostConfigurationBadRequest with default headers values
+func NewPostConfigurationBadRequest() *PostConfigurationBadRequest {
+
+	return &PostConfigurationBadRequest{}
+}
+
+// WriteResponse to the client
+func (o *PostConfigurationBadRequest) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(400)
+}
+
+// PostConfigurationUnauthorizedCode is the HTTP code returned for type PostConfigurationUnauthorized
+const PostConfigurationUnauthorizedCode int = 401
+
+/*PostConfigurationUnauthorized Unauthorized
+
+swagger:response postConfigurationUnauthorized
+*/
+type PostConfigurationUnauthorized struct {
+	/*Authorization information is missing or invalid
+
+	 */
+	WWWAuthenticate string `json:"WWW-Authenticate"`
+}
+
+// NewPostConfigurationUnauthorized creates PostConfigurationUnauthorized with default headers values
+func NewPostConfigurationUnauthorized() *PostConfigurationUnauthorized {
+
+	return &PostConfigurationUnauthorized{}
+}
+
+// WithWWWAuthenticate adds the wWWAuthenticate to the post configuration unauthorized response
+func (o *PostConfigurationUnauthorized) WithWWWAuthenticate(wWWAuthenticate string) *PostConfigurationUnauthorized {
+	o.WWWAuthenticate = wWWAuthenticate
+	return o
+}
+
+// SetWWWAuthenticate sets the wWWAuthenticate to the post configuration unauthorized response
+func (o *PostConfigurationUnauthorized) SetWWWAuthenticate(wWWAuthenticate string) {
+	o.WWWAuthenticate = wWWAuthenticate
+}
+
+// WriteResponse to the client
+func (o *PostConfigurationUnauthorized) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	// response header WWW-Authenticate
+
+	wWWAuthenticate := o.WWWAuthenticate
+	if wWWAuthenticate != "" {
+		rw.Header().Set("WWW-Authenticate", wWWAuthenticate)
+	}
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(401)
+}
+
+// PostConfigurationInternalServerErrorCode is the HTTP code returned for type PostConfigurationInternalServerError
+const PostConfigurationInternalServerErrorCode int = 500
+
+/*PostConfigurationInternalServerError Internal Server Error
+
+swagger:response postConfigurationInternalServerError
+*/
+type PostConfigurationInternalServerError struct {
+
+	/*
+	  In: Body
+	*/
+	Payload string `json:"body,omitempty"`
+}
+
+// NewPostConfigurationInternalServerError creates PostConfigurationInternalServerError with default headers values
+func NewPostConfigurationInternalServerError() *PostConfigurationInternalServerError {
+
+	return &PostConfigurationInternalServerError{}
+}
+
+// WithPayload adds the payload to the post configuration internal server error response
+func (o *PostConfigurationInternalServerError) WithPayload(payload string) *PostConfigurationInternalServerError {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the post configuration internal server error response
+func (o *PostConfigurationInternalServerError) SetPayload(payload string) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *PostConfigurationInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(500)
+	payload := o.Payload
+	if err := producer.Produce(rw, payload); err != nil {
+		panic(err) // let the recovery middleware deal with this
+	}
+}
