# swagger.yml
@@ -1,78 +1,73 @@
 # @format
 
-consumes:
-  - application/json
 info:
   title: Microfest
   contact:
     name: J. Iqbal
     url: https://github.com/LGUG2Z/microfest
     email: jade@beamery.com
-  description: Micro Application Manifest Manager
-  version: 0.1.0
+  description: Micro Application Manifest and Configuration Manager
+  version: 0.0.1
 paths:
-  /backup:
-    post:
-      summary: Backs up the database to a GCS bucket
-      operationId: PostBackup
+  /configuration:
+    get:
+      summary: Gets the configuration
+      operationId: GetConfiguration
       security:
         - APIKeyHeader: []
+      produces:
+        - application/json
+      parameters:
+        - $ref: "#/parameters/Host"
+      responses:
+        200:
+          $ref: "#/responses/OK"
+        401:
+          $ref: "#/responses/Unauthorized"
+        404:
+          $ref: "#/responses/NotFound"
+        500:
+          $ref: "#/responses/InternalServerError"
+    post:
+      summary: Submits a new configuration
+      operationId: PostConfiguration
+      security:
+        - APIKeyHeader: []
+      consumes:
+        - application/json
       produces:
         - text/plain
       parameters:
-        - $ref: '#/parameters/Bucket'
+        - $ref: "#/parameters/Host"
+        - $ref: "#/parameters/Configuration"
       responses:
         201:
-          description: Backup Created
-          schema:
-            type: string
+          $ref: "#/responses/ConfigurationCreated"
+        400:
+          $ref: "#/responses/BadRequestBody"
         401:
-          $ref: '#/responses/Unauthorized'
+          $ref: "#/responses/Unauthorized"
         500:
-          $ref: '#/responses/InternalServerError'
-  /info:
+          $ref: "#/responses/InternalServerError"
+  /manifest:
     get:
-      summary: Gets information about the current manifest
-      operationId: GetInfo
+      summary: Gets the manifest
+      operationId: GetManifest
       security:
         - APIKeyHeader: []
       produces:
         - application/json
       parameters:
-        - $ref: '#/parameters/Key'
-        - $ref: '#/parameters/Host'
+        - $ref: "#/parameters/Host"
       responses:
         200:
-          description: OK
-          schema:
-            description: The requested manifest
-            type: object
+          $ref: "#/responses/OK"
+        401:
+          $ref: "#/responses/Unauthorized"
         404:
-          description: Not Found
-          schema:
-            type: string
+          $ref: "#/responses/NotFound"
         500:
-          $ref: '#/responses/InternalServerError'
-  /manifest:
-    get:
-      summary: Gets the latest manifest
-      operationId: GetManifest
-      produces:
-        - application/json
-      parameters:
-        - $ref: '#/parameters/Host'
-      responses:
-        200:
-          description: OK
-          schema:
-            description: The latest manifest
-            type: object
-          headers:
-            Cache-Control:
-              description: Cache-Control
-              type: string
-        500:
-          $ref: '#/responses/InternalServerError'
+          $ref: "#/responses/InternalServerError"
     put:
       summary: Submits a patch to create a new manifest
       operationId: PutManifest
@@ -83,17 +78,19 @@ paths:
       produces:
         - text/plain
       parameters:
-        - $ref: '#/parameters/Host'
-        - $ref: '#/parameters/Microfest'
+        - $ref: "#/parameters/Host"
+        - $ref: "#/parameters/Manifest"
       responses:
         201:
-          $ref: '#/responses/ManifestCreated'
+          $ref: "#/responses/ManifestCreated"
         400:
-          description: Bad Request Body
+          $ref: "#/responses/BadRequestBody"
+        404:
+          $ref: "#/responses/NotFound"
         401:
-          $ref: '#/responses/Unauthorized'
+          $ref: "#/responses/Unauthorized"
         500:
-          $ref: '#/responses/InternalServerError'
+          $ref: "#/responses/InternalServerError"
     post:
       summary: Submits a new manifest
       operationId: PostManifest
@@ -104,19 +101,17 @@ paths:
       produces:
         - text/plain
       parameters:
-        - $ref: '#/parameters/Host'
-        - $ref: '#/parameters/Microfest'
+        - $ref: "#/parameters/Host"
+        - $ref: "#/parameters/Manifest"
       responses:
         201:
-          $ref: '#/responses/ManifestCreated'
+          $ref: "#/responses/ManifestCreated"
         400:
           description: Bad Request Body
         401:
-          $ref: '#/responses/Unauthorized'
+          $ref: "#/responses/Unauthorized"
         500:
-          $ref: '#/responses/InternalServerError'
-produces:
-  - application/json
+          $ref: "#/responses/InternalServerError"
 schemes:
   - http
 swagger: "2.0"
@@ -129,50 +124,49 @@ definitions:
   principal:
     type: string
 parameters:
-  Bucket:
-    in: query
-    name: bucket
-    type: string
-    description: The GCS bucket to back up to
-    required: true
-  Key:
-    in: query
-    name: key
-    type: string
-    description: The manifest key
-    required: true
   Host:
     in: query
     name: host
     type: string
     description: The environment hostname
     required: true
-  Microfest:
+  Manifest:
     in: body
-    name: microfest
+    name: manifest
     description: The manifest to submit
     schema:
       type: object
-      maxProperties: 3
-      required:
-        - release
-        - manifest
-        - updated
-      properties:
-        release:
-          type: string
-        manifest:
-          type: object
-        updated:
-          type: array
-          items:
-            type: string
-
+  Configuration:
+    in: body
+    name: configuration
+    description: The configuration to submit
+    schema:
+      type: object
 responses:
+  OK:
+    description: OK
+    schema:
+      description: The JSON artifact
+      type: object
+    headers:
+      Cache-Control:
+        description: Cache-Control
+        type: string
+
   ManifestCreated:
     description: Manifest Created
     schema:
       type: string
+  ConfigurationCreated:
+    description: Configuration Created
+    schema:
+      type: string
+  NotFound:
+    description: Not Found
+    schema:
+      type: string
+  BadRequestBody:
+    description: Bad Request Body
   Unauthorized:
     description: Unauthorized
     headers:
